All done. Commits are progress on the lightbox function

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<input class="search" type="text" name="searchInput">
 		<button id="search" type="submit">Search</button>
 	</form>
+	<div class="videowrapper hidden"></div>
 	<ul class="results">
 			
 	</ul>
